--- a/share/man/man4/man4.zaurus/Attic/saost.4
+++ b/share/man/man4/man4.zaurus/Attic/saost.4
@@ -1,4 +1,4 @@
-.\" 	$OpenBSD: saost.4,v 1.3 2005/05/25 07:54:25 david Exp $
+.\" 	$OpenBSD: saost.4,v 1.4 2007/03/19 20:55:36 jmc Exp $
 .\"
 .\" Copyright (c) 2005, Miodrag Vallat.
 .\" All rights reserved.
