--- a/usr.bin/cvs/Attic/cvsrc.5
+++ b/usr.bin/cvs/Attic/cvsrc.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cvsrc.5,v 1.5 2005/06/11 12:15:44 joris Exp $
+.\"	$OpenBSD: cvsrc.5,v 1.6 2005/06/16 08:06:45 xsa Exp $
 .\"
 .\" Copyright (c) 2004 Jean-Francois Brousseau <jfb@openbsd.org>
 .\" All rights reserved.
