--- a/usr.bin/cvs/Attic/cvsignore.5
+++ b/usr.bin/cvs/Attic/cvsignore.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cvsignore.5,v 1.1 2005/08/02 11:00:56 xsa Exp $
+.\"	$OpenBSD: cvsignore.5,v 1.2 2005/08/23 08:17:44 jmc Exp $
 .\"
 .\" Copyright (c) 2005 Xavier Santolaria <xsa@openbsd.org>
 .\" All rights reserved.
