--- a/usr.bin/cvs/Attic/cvswrappers.5
+++ b/usr.bin/cvs/Attic/cvswrappers.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cvswrappers.5,v 1.1 2005/08/08 14:59:41 xsa Exp $
+.\"	$OpenBSD: cvswrappers.5,v 1.2 2006/04/19 11:04:28 jmc Exp $
 .\"
 .\" Copyright (c) 2005 Xavier Santolaria <xsa@openbsd.org>
 .\" All rights reserved.
