--- a/share/man/man4/man4.sparc64/intro.4
+++ b/share/man/man4/man4.sparc64/intro.4
@@ -1,9 +1,9 @@
-.\"     $OpenBSD: intro.4,v 1.56 2007/05/31 19:19:57 jmc Exp $
+.\"     $OpenBSD: intro.4,v 1.57 2007/06/21 08:49:20 jmc Exp $
 .\"
 .\" Copyright (c) 2001-2002 The OpenBSD Project
 .\" All Rights Reserved.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: June 21 2007 $
 .Dt INTRO 4 sparc64
 .Os
 .Sh NAME
@@ -75,6 +75,8 @@ The following buses and controllers list these devices:
 .Bl -tag -width "cardbus(4)XX" -offset 3n -compact
 .It Xr ebus 4
 introduction to SPARC EBus bus support
+.It Xr iic 4
+Inter IC (I2C) bus
 .It Xr pci 4
 introduction to PCI bus support
 .It Xr pcmcia 4
