--- a/share/man/man4/man4.sgi/gbe.4
+++ b/share/man/man4/man4.sgi/gbe.4
@@ -1,3 +1,4 @@
+.\"     $OpenBSD$
 .\"
 .\" Copyright (c) 2007, Joel Sing <jsing@openbsd.org>
 .\"
@@ -13,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: November 27 2007 $
 .Dt GBE 4 sgi 
 .Os
 .Sh NAME
