--- a/share/man/man4/man4.sgi/intro.4
+++ b/share/man/man4/man4.sgi/intro.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: intro.4,v 1.10 2007/06/21 08:17:20 jmc Exp $
+.\"	$OpenBSD: intro.4,v 1.11 2007/06/21 08:49:20 jmc Exp $
 .\"     $NetBSD: intro.4,v 1.8 2004/02/10 16:54:19 wiz Exp $
 .\"
 .\" Copyright (c) 2003 The NetBSD Foundation, Inc.
@@ -125,6 +125,8 @@ serial communications interface
 .\" real-time clock
 .\" .It dpclock
 .\" real-time clock
+.It Xr gbe 4
+SGI Graphics Back End (GBE) Frame Buffer
 .\" .It gio
 .\" PCI-like bus
 .\" .It hpc
