--- a/share/man/man4/man4.sgi/gbe.4
+++ b/share/man/man4/man4.sgi/gbe.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: gbe.4,v 1.2 2007/11/27 16:05:19 jasper Exp $
+.\"     $OpenBSD: gbe.4,v 1.3 2007/11/27 17:49:19 jmc Exp $
 .\"
 .\" Copyright (c) 2007, Joel Sing <jsing@openbsd.org>
 .\"
@@ -34,6 +34,7 @@ Console support is provided by the
 console framework.
 .Sh SEE ALSO
 .Xr intro 4 ,
+.Xr mainbus 4 ,
 .Xr wscons 4 ,
 .Xr wsdisplay 4
 .Sh HISTORY
