--- a/share/man/man4/man4.sparc/pnozz.4
+++ b/share/man/man4/man4.sparc/pnozz.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: pnozz.4,v 1.26 2007/05/31 19:19:56 jmc Exp $
+.\"     $OpenBSD: pnozz.4,v 1.27 2007/07/13 19:18:17 miod Exp $
 .\"
 .\" Copyright (c) 1999 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -63,7 +63,7 @@ device is also configured, the
 will be powered down when the lid of the laptop
 is closed or the screen is blanked.
 .Pp
-On machines with a 800 pixel wide display, the
+On machines with an 800 pixel wide display, the
 .Nm
 driver supports hardware acceleration to erase the screen and scroll text.
 .\" By default, acceleration is
