--- a/share/man/man4/man4.sgi/intro.4
+++ b/share/man/man4/man4.sgi/intro.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: intro.4,v 1.13 2007/11/28 16:06:10 jmc Exp $
+.\"	$OpenBSD: intro.4,v 1.14 2007/11/29 12:32:36 jsing Exp $
 .\"     $NetBSD: intro.4,v 1.8 2004/02/10 16:54:19 wiz Exp $
 .\"
 .\" Copyright (c) 2003 The NetBSD Foundation, Inc.
@@ -32,7 +32,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: November 28 2007 $
+.Dd $Mdocdate: November 29 2007 $
 .Dt INTRO 4 sgi
 .Os
 .Sh NAME
@@ -117,6 +117,8 @@ SGI main processor bus device
 Moosehead A/V Board audio device
 .It Xr mec 4
 MAC-110 10/100 Ethernet device
+.It Xr power 4
+power button
 .El
 .Pp
 A further list of available devices is contained within the pages
