--- a/share/man/man4/man4.mvme88k/bussw.4
+++ b/share/man/man4/man4.mvme88k/bussw.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: bussw.4,v 1.3 2006/09/07 20:29:35 jmc Exp $
+.\"	$OpenBSD: bussw.4,v 1.4 2007/05/31 19:19:55 jmc Exp $
 .\"
 .\" Copyright (c) 2003 Paul Weissmann
 .\" All rights reserved.
@@ -25,7 +25,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt BUSSW 4 mvme88k
 .Os
 .Sh NAME
@@ -63,5 +63,5 @@ Four 32-bit general purpose registers
 .El
 .Sh SEE ALSO
 .Xr intro 4 ,
-.Xr pcctwo 4
-.\" .Xr syscon 4
+.Xr pcctwo 4 ,
+.Xr syscon 4
