--- a/share/man/man4/man4.mvme88k/bussw.4
+++ b/share/man/man4/man4.mvme88k/bussw.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: bussw.4,v 1.4 2007/05/31 19:19:55 jmc Exp $
+.\"	$OpenBSD: bussw.4,v 1.5 2008/01/05 12:47:56 miod Exp $
 .\"
 .\" Copyright (c) 2003 Paul Weissmann
 .\" All rights reserved.
@@ -25,7 +25,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate: January 5 2008 $
 .Dt BUSSW 4 mvme88k
 .Os
 .Sh NAME
@@ -45,7 +45,7 @@ I/O devices, e.g. SCSI and Ethernet, are attached.
 .Pp
 It includes the following features:
 .Pp
-.Bl -bullet -compact
+.Bl -bullet -compact -offset indent
 .It
 Bus arbitration for the
 .Tn MC88110
