--- a/share/man/man4/man4.sparc64/central.4
+++ b/share/man/man4/man4.sparc64/central.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: central.4,v 1.3 2004/09/24 07:03:47 miod Exp $
+.\"     $OpenBSD: central.4,v 1.4 2007/05/31 19:19:57 jmc Exp $
 .\"
 .\" Copyright (c) 2004 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -24,12 +24,12 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt CENTRAL 4 sparc64
 .Os
 .Sh NAME
 .Nm central
-.Nd SPARC64 Central Controller
+.Nd SPARC64 Central controller
 .Sh SYNOPSIS
 .Cd "central* at mainbus0"
 .Sh DESCRIPTION
@@ -42,7 +42,7 @@ most often found on Sunfire, Starfire, and Wildfire
 UltraSPARC systems.
 It provides an attachment point for the main
 .Xr fhc 4
-firehose controller used to control board
+Firehose controller used to control board
 level functions on the host.
 .Sh SEE ALSO
 .Xr fhc 4 ,
