--- a/share/man/man4/man4.sparc/intro.4
+++ b/share/man/man4/man4.sparc/intro.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: intro.4,v 1.50 2007/06/21 10:18:27 jmc Exp $
+.\"     $OpenBSD: intro.4,v 1.51 2007/06/21 19:45:46 jmc Exp $
 .\"	$NetBSD: intro.4,v 1.5 1998/02/06 06:07:00 perry Exp $
 .\"
 .\" Copyright (c) 1996 Jonathan Stone.
@@ -171,7 +171,7 @@ SBus PCMCIA bridge
 .It Xr esp 4
 ESP NCR 53c94 on-board or SBus SCSI interface
 .It Xr isp 4
-Qlogic based SCSI or Fibre Channel SCSI interface
+QLogic based SCSI or Fibre Channel SCSI interface
 .It Xr si 4
 NCR 5380 Sun SCSI 3 VME SCSI controller
 .It Xr sw 4
