--- a/share/man/man4/man4.sparc64/beeper.4
+++ b/share/man/man4/man4.sparc64/beeper.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: beeper.4,v 1.4 2006/05/29 03:30:00 jason Exp $
+.\"     $OpenBSD: beeper.4,v 1.5 2007/05/31 19:19:57 jmc Exp $
 .\"
 .\" Copyright (c) 2002 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -24,7 +24,7 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt BEEPER 4 sparc64
 .Os
 .Sh NAME
@@ -39,11 +39,14 @@ The
 device does exactly what it sounds like: it beeps.
 In particular, this device registers itself to handle beeping for
 .Xr pckbd 4
+or
+.Xr ukbd 4
 devices.
 .Sh SEE ALSO
 .Xr ebus 4 ,
 .Xr intro 4 ,
-.Xr pckbd 4
+.Xr pckbd 4 ,
+.Xr ukbd 4
 .Sh HISTORY
 .Ox
 support for the
