--- a/share/man/man5/pf.conf.5
+++ b/share/man/man5/pf.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pf.conf.5,v 1.390 2007/11/21 03:58:46 ray Exp $
+.\"	$OpenBSD: pf.conf.5,v 1.391 2008/02/01 07:26:41 mcbride Exp $
 .\"
 .\" Copyright (c) 2002, Daniel Hartmeier
 .\" All rights reserved.
@@ -27,7 +27,7 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: November 21 2007 $
+.Dd $Mdocdate: Febuary 1 2008 $
 .Dt PF.CONF 5
 .Os
 .Sh NAME
@@ -2975,8 +2975,6 @@ Default location of OS fingerprints.
 Protocol name database.
 .It Pa /etc/services
 Service name database.
-.It Pa /usr/share/pf
-Example rulesets.
 .El
 .Sh SEE ALSO
 .Xr carp 4 ,
