--- a/share/man/man5/mk.conf.5
+++ b/share/man/man5/mk.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mk.conf.5,v 1.14 2007/05/31 19:19:58 jmc Exp $
+.\"	$OpenBSD: mk.conf.5,v 1.15 2008/02/04 18:10:00 jmc Exp $
 .\"
 .\" Copyright (c) 2003 Jason McIntyre
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate$
 .Dt MK.CONF 5
 .Os
 .Sh NAME
