--- a/share/man/man4/man4.sparc64/tda.4
+++ b/share/man/man4/man4.sparc64/tda.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: tda.4,v 1.1 2008/02/12 10:12:14 robert Exp $
+.\"	$OpenBSD: tda.4,v 1.2 2008/02/12 13:52:06 kettenis Exp $
 .\"
 .\" Copyright (c) 2008 <robert@openbsd.org>
 .\"
@@ -14,8 +14,8 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: February 12 2008 $
-.Dt TDA 4
+.Dd $Mdocdate: Febuary 12 2008 $
+.Dt TDA 4 sparc64
 .Os
 .Sh NAME
 .Nm tda
