--- a/share/man/man5/mk.conf.5
+++ b/share/man/man5/mk.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mk.conf.5,v 1.15 2008/02/04 18:10:00 jmc Exp $
+.\"	$OpenBSD: mk.conf.5,v 1.16 2008/02/11 07:58:28 jmc Exp $
 .\"
 .\" Copyright (c) 2003 Jason McIntyre
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: Febuary 11 2008 $
 .Dt MK.CONF 5
 .Os
 .Sh NAME
@@ -169,7 +169,7 @@ The real path to the 'obj' tree for building the X Window System.
 .Bq Pa /usr/xobj
 .It Ev XSRCDIR
 The real path to the X Window System sources.
-.Bq Pa /usr/src/xenocara
+.Bq Pa /usr/xenocara
 .El
 .Sh ADDITIONAL VARIABLES
 Additionally, the following variables may be set by
