--- a/share/man/man4/man4.sparc64/intro.4
+++ b/share/man/man4/man4.sparc64/intro.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: intro.4,v 1.58 2007/10/09 14:26:00 jmc Exp $
+.\"     $OpenBSD: intro.4,v 1.59 2007/10/09 15:01:40 jmc Exp $
 .\"
 .\" Copyright (c) 2001-2002 The OpenBSD Project
 .\" All Rights Reserved.
@@ -87,6 +87,8 @@ introduction to PCMCIA (PC Card) support
 introduction to SBus bus support
 .It Xr usb 4
 introduction to Universal Serial Bus support
+.It Xr vbus 4
+virtual device bus
 .El
 .Sh SEE ALSO
 .Xr autoconf 4 ,
