--- a/share/man/man4/man4.sparc64/tvtwo.4
+++ b/share/man/man4/man4.sparc64/tvtwo.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: tvtwo.4,v 1.6 2008/03/15 15:16:41 miod Exp $
+.\"	$OpenBSD: tvtwo.4,v 1.7 2008/03/15 17:51:49 jmc Exp $
 .\" Copyright (c) 2003 Miodrag Vallat.  All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
@@ -81,6 +81,7 @@ These settings cannot be modified under
 .Xr cgthree 4 ,
 .Xr cgtwelve 4 ,
 .Xr creator 4 ,
+.Xr ifb 4 ,
 .Xr intro 4 ,
 .Xr mgx 4 ,
 .Xr rfx 4 ,
