--- a/share/man/man4/man4.sparc64/cgthree.4
+++ b/share/man/man4/man4.sparc64/cgthree.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cgthree.4,v 1.18 2005/03/06 18:57:21 martin Exp $
+.\"	$OpenBSD: cgthree.4,v 1.19 2007/05/31 19:19:57 jmc Exp $
 .\"
 .\" Copyright (c) 2001 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -24,7 +24,7 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt CGTHREE 4 sparc64
 .Os
 .Sh NAME
@@ -95,6 +95,7 @@ Note that not all models support settings other than their default setting.
 .Xr cgsix 4 ,
 .Xr cgtwelve 4 ,
 .Xr creator 4 ,
+.Xr ifb 4 ,
 .Xr intro 4 ,
 .Xr mgx 4 ,
 .Xr rfx 4 ,
