--- a/share/man/man4/man4.sparc64/vigra.4
+++ b/share/man/man4/man4.sparc64/vigra.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: vigra.4,v 1.3 2007/05/31 19:19:57 jmc Exp $
+.\"	$OpenBSD: vigra.4,v 1.4 2007/12/23 22:16:39 jmc Exp $
 .\" Copyright (c) 2002 Miodrag Vallat.  All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
@@ -22,7 +22,7 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate: December 23 2007 $
 .Dt VIGRA 4 sparc64
 .Os
 .Sh NAME
@@ -110,6 +110,7 @@ rates.
 .Xr cgsix 4 ,
 .Xr cgthree 4 ,
 .Xr creator 4 ,
+.Xr ifb 4 ,
 .Xr intro 4 ,
 .Xr mgx 4 ,
 .Xr rfx 4 ,
