--- a/share/man/man4/man4.sparc64/cgtwelve.4
+++ b/share/man/man4/man4.sparc64/cgtwelve.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cgtwelve.4,v 1.1 2005/03/05 01:48:59 miod Exp $
+.\"	$OpenBSD: cgtwelve.4,v 1.2 2007/05/31 19:19:57 jmc Exp $
 .\"
 .\" Copyright (c) 2002 Miodrag Vallat.  All rights reserved.
 .\"
@@ -23,7 +23,7 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt CGTWELVE 4 sparc64
 .Os
 .Sh NAME
@@ -53,6 +53,7 @@ interface.
 .Xr cgsix 4 ,
 .Xr cgthree 4 ,
 .Xr creator 4 ,
+.Xr ifb 4 ,
 .Xr intro 4 ,
 .Xr mgx 4 ,
 .Xr rfx 4 ,
