--- a/share/man/man4/man4.sparc64/mgx.4
+++ b/share/man/man4/man4.sparc64/mgx.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mgx.4,v 1.8 2007/05/31 19:19:57 jmc Exp $
+.\"	$OpenBSD: mgx.4,v 1.9 2007/12/23 22:16:39 jmc Exp $
 .\"
 .\" Copyright (c) 2003, 2005 Miodrag Vallat
 .\"
@@ -23,7 +23,7 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate: December 23 2007 $
 .Dt MGX 4 sparc64
 .Os
 .Sh NAME
@@ -91,6 +91,7 @@ All other combinations are unsupported and may damage the hardware.
 .Xr cgthree 4 ,
 .Xr cgtwelve 4 ,
 .Xr creator 4 ,
+.Xr ifb 4 ,
 .Xr intro 4 ,
 .Xr rfx 4 ,
 .Xr sbus 4 ,
