Correct the synopsis.
ok jasper@

--- a/share/man/man4/man4.sgi/power.4
+++ b/share/man/man4/man4.sgi/power.4
@@ -22,7 +22,7 @@
 .Nm power
 .Nd power button
 .Sh SYNOPSIS
-.Cd "power0 at mainbus?"
+.Cd "power0 at macebus0 irq 6"
 .Sh DESCRIPTION
 The SGI O2 machines generate an interrupt when the power button on the front
 panel is pressed.
