--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.207 2008/01/12 14:23:07 espie Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.208 2008/01/12 16:04:35 jmc Exp $
 .\"
 .\" Copyright (c) 2000 Marc Espie
 .\"
@@ -1597,6 +1597,8 @@ ports system must have control over shared library versions because of global
 changes that may require bumping the major version of every shared library in
 the system, or simply because the third party programmers do not understand
 the rules for shared library versions, thus breaking the update mechanism.
+For that reason it is advised to set libversion to 0.0 when first importing a
+port.
 .Pp
 Porters of software using libtool should also set
 .Ev USE_LIBTOOL
