--- a/share/man/man4/man4.sparc64/ifb.4
+++ b/share/man/man4/man4.sparc64/ifb.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD$
+.\"	$OpenBSD: ifb.4,v 1.1 2008/03/23 20:07:19 miod Exp $
 .\"
 .\" Copyright (c) 2008 Miodrag Vallat.
 .\"
@@ -15,8 +15,8 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate$
-.Dt IFB 4
+.Dd $Mdocdate: March 23 2008 $
+.Dt IFB 4 sparc64
 .Os
 .Sh NAME
 .Nm ifb
