Bring the synopsis sections of various sgi man pages into line with direct configuration.
ok miod@

--- a/share/man/man4/man4.sgi/macebus.4
+++ b/share/man/man4/man4.sgi/macebus.4
@@ -42,12 +42,12 @@
 .Cd "macebus0 at mainbus0"
 .Pp
 .Cd "clock0 at macebus0"
-.Cd "com0 at macebus0 sys 0x18 base 0x00390000 irq 5"
-.Cd "com1 at macebus0 sys 0x18 base 0x00398000 irq 5"
-.Cd "mavb0 at macebus0 sys 0x18 base 0x00300000 irq 7"
-.Cd "mec0 at macebus0 sys 0x18 base 0x00280000 irq 4"
-.Cd "mkbc0 at macebus0 sys 0x18 base 0x00320000 irq 6"
-.Cd "power0 at macebus0 sys 0x18 irq 6"
+.Cd "com0 at macebus0 base 0x00390000 irq 5"
+.Cd "com1 at macebus0 base 0x00398000 irq 5"
+.Cd "mavb0 at macebus0 base 0x00300000 irq 7"
+.Cd "mec0 at macebus0 base 0x00280000 irq 4"
+.Cd "mkbc0 at macebus0 base 0x00320000 irq 6"
+.Cd "power0 at macebus0 irq 6"
 .Pp
 .Cd "macepcibr0 at macebus0"
 .Cd "pci* at macepcbir?"
