--- a/share/man/man4/man4.sgi/mavb.4
+++ b/share/man/man4/man4.sgi/mavb.4
@@ -1,4 +1,4 @@
-.\"   $OpenBSD: mavb.4,v 1.3 2006/08/31 12:33:42 jmc Exp $
+.\"   $OpenBSD: mavb.4,v 1.4 2007/05/31 19:19:56 jmc Exp $
 .\"
 .\" Copyright (c) 2005 Mark Kettenis
 .\"
@@ -21,7 +21,7 @@
 .Nm mavb
 .Nd Moosehead A/V Board audio device
 .Sh SYNOPSIS
-.Cd "mavb0 at macebus0 sys 0x18 base 0x00300000 irq 7"
+.Cd "mavb0 at macebus0 base 0x00300000 irq 7"
 .Cd "audio* at mavb?"
 .Sh DESCRIPTION
 The
