Bring the synopsis sections of various sgi man pages into line with direct configuration.
ok miod@

--- a/share/man/man4/man4.sgi/mec.4
+++ b/share/man/man4/man4.sgi/mec.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mec.4,v 1.5 2006/08/30 22:56:05 jmc Exp $
+.\"	$OpenBSD: mec.4,v 1.6 2007/05/31 19:19:56 jmc Exp $
 .\"
 .\"	Written by Michael Shalayeff, 2004. Public Domain.
 .\"
@@ -9,7 +9,7 @@
 .Nm mec
 .Nd MAC-110 10/100 Ethernet device
 .Sh SYNOPSIS
-.Cd "mec0 at macebus0 sys 0x18 base 0x00280000 irq 4"
+.Cd "mec0 at macebus0 base 0x00280000 irq 4"
 .Sh DESCRIPTION
 The
 .Nm
