Bring the synopsis sections of various sgi man pages into line with direct configuration.
ok miod@

--- a/share/man/man4/man4.sgi/mkbc.4
+++ b/share/man/man4/man4.sgi/mkbc.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD$
+.\"	$OpenBSD: mkbc.4,v 1.2 2007/10/18 21:13:31 jmc Exp $
 .\"
 .\" Copyright (c) 2007 Joel Sing
 .\"
@@ -21,7 +21,7 @@
 .Nm mkbc
 .Nd Moosehead PS/2 Controller
 .Sh SYNOPSIS
-.Cd "mkbc0 at macebus0 sys 0x18 base 0x00320000 irq 6"
+.Cd "mkbc0 at macebus0 base 0x00320000 irq 6"
 .Cd "pckbd* at mkbc?"
 .Cd "pms* at mkbc?"
 .Sh DESCRIPTION
