--- a/share/man/man4/man4.sparc/mgx.4
+++ b/share/man/man4/man4.sparc/mgx.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mgx.4,v 1.8 2007/05/31 19:19:56 jmc Exp $
+.\"	$OpenBSD: mgx.4,v 1.9 2007/12/23 22:16:39 jmc Exp $
 .\"
 .\" Copyright (c) 2003, 2005 Miodrag Vallat
 .\"
@@ -23,7 +23,7 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate: December 23 2007 $
 .Dt MGX 4 sparc
 .Os
 .Sh NAME
@@ -85,26 +85,10 @@ The DIP switch settings are as follows:
 .Pp
 All other combinations are unsupported and may damage the hardware.
 .Sh SEE ALSO
-.Xr agten 4 ,
-.Xr bwtwo 4 ,
-.Xr cgeight 4 ,
-.Xr cgfour 4 ,
-.Xr cgfourteen 4 ,
-.Xr cgsix 4 ,
-.Xr cgthree 4 ,
-.Xr cgtwelve 4 ,
-.Xr cgtwo 4 ,
 .Xr intro 4 ,
-.Xr pninek 4 ,
-.Xr pnozz 4 ,
-.Xr rfx 4 ,
 .Xr sbus 4 ,
-.Xr tcx 4 ,
-.Xr tvtwo 4 ,
-.Xr vigra 4 ,
 .Xr wscons 4 ,
-.Xr wsdisplay 4 ,
-.Xr zx 4
+.Xr wsdisplay 4
 .Sh CAVEATS
 This driver does not support any acceleration features at the moment, and
 drives the card in PROM-compatible, 8 bit, mode only.
