--- a/share/man/man4/man4.sparc64/audioce.4
+++ b/share/man/man4/man4.sparc64/audioce.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: audioce.4,v 1.4 2006/08/31 12:33:42 jmc Exp $
+.\"     $OpenBSD: audioce.4,v 1.5 2007/05/31 19:19:56 jmc Exp $
 .\"
 .\" Copyright (c) 2001 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -24,7 +24,7 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt AUDIOCE 4 sparc64
 .Os
 .Sh NAME
@@ -52,7 +52,6 @@ The output ports are: the internal speaker, line, and headphones.
 .Sh SEE ALSO
 .Xr ioctl 2 ,
 .Xr audio 4 ,
-.Xr audiocs 4 ,
 .Xr ebus 4 ,
 .Xr intro 4
 .Sh HISTORY
