--- a/share/man/man4/man4.sparc64/schizo.4
+++ b/share/man/man4/man4.sparc64/schizo.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: schizo.4,v 1.5 2007/03/30 22:15:28 kettenis Exp $
+.\"     $OpenBSD: schizo.4,v 1.6 2007/05/31 19:19:57 jmc Exp $
 .\"
 .\" Copyright (c) 2002 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -24,7 +24,7 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt SCHIZO 4 sparc64
 .Os
 .Sh NAME
@@ -45,8 +45,7 @@ interface in
 .Xr pci 4 .
 .Sh SEE ALSO
 .Xr intro 4 ,
-.Xr pci 4 ,
-.Xr psycho 4
+.Xr pci 4
 .Sh HISTORY
 The
 .Nm
