--- a/share/man/man4/man4.sparc64/audiocs.4
+++ b/share/man/man4/man4.sparc64/audiocs.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: audiocs.4,v 1.8 2006/09/05 14:09:33 jmc Exp $
+.\"     $OpenBSD: audiocs.4,v 1.9 2007/05/31 19:19:56 jmc Exp $
 .\"
 .\" Copyright (c) 2001 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -24,7 +24,7 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt AUDIOCS 4 sparc64
 .Os
 .Sh NAME
@@ -50,7 +50,6 @@ The output ports are: the internal speaker, line, and headphones.
 .Sh SEE ALSO
 .Xr ioctl 2 ,
 .Xr audio 4 ,
-.Xr audioce 4 ,
 .Xr intro 4 ,
 .Xr sbus 4
 .Sh HISTORY
