--- a/share/man/man4/man4.vax/lcspx.4
+++ b/share/man/man4/man4.vax/lcspx.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: lcspx.4,v 1.5 2007/12/09 21:57:26 miod Exp $
+.\"	$OpenBSD: lcspx.4,v 1.6 2007/12/10 07:46:16 jmc Exp $
 .\"
 .\" Copyright (c) 2003 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -24,7 +24,7 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: December 9 2007 $
+.Dd $Mdocdate: December 10 2007 $
 .Dt LCSPX 4 vax
 .Os
 .Sh NAME
@@ -52,10 +52,7 @@ but makes its functions available via the internal
 .Xr wsdisplay 4
 interface.
 .Sh SEE ALSO
-.Xr gpx 4 ,
 .Xr intro 4 ,
-.Xr lcg 4 ,
-.Xr smg 4 ,
 .Xr vsbus 4 ,
 .Xr vxtbus 4 ,
 .Xr wscons 4 ,
