--- a/share/man/man4/man4.vax/lcg.4
+++ b/share/man/man4/man4.vax/lcg.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: lcg.4,v 1.2 2006/08/27 17:32:58 miod Exp $
+.\"	$OpenBSD: lcg.4,v 1.3 2007/05/31 19:19:57 jmc Exp $
 .\"
 .\" Copyright (c) 2003 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -24,7 +24,7 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt LCG 4 vax
 .Os
 .Sh NAME
@@ -49,10 +49,7 @@ but makes its functions available via the internal
 .Xr wsdisplay 4
 interface.
 .Sh SEE ALSO
-.Xr gpx 4 ,
 .Xr intro 4 ,
-.Xr lcspx 4 ,
-.Xr smg 4 ,
 .Xr vsbus 4 ,
 .Xr wscons 4 ,
 .Xr wsdisplay 4
