--- a/share/man/man7/hier.7
+++ b/share/man/man7/hier.7
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hier.7,v 1.69 2008/03/03 07:02:28 matthieu Exp $
+.\"	$OpenBSD: hier.7,v 1.70 2008/03/03 23:05:35 jmc Exp $
 .\"	$NetBSD: hier.7,v 1.7 1994/11/30 19:07:10 jtc Exp $
 .\"
 .\" Copyright (c) 1990, 1993
@@ -492,9 +492,6 @@ Templates for
 .Xr make 1 ) .
 .It nls/
 National Language Support (NLS) catalogs.
-.It pf/
-Sample configuration files for
-.Xr pf 4 .
 .It sendmail/
 Example files for
 .Xr sendmail 8 .
