--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.209 2008/03/24 14:41:35 ajacoutot Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.210 2008/04/07 11:19:40 espie Exp $
 .\"
 .\" Copyright (c) 2000 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: March 24 2008 $
+.Dd $Mdocdate: April 7 2008 $
 .Dt BSD.PORT.MK 5
 .Os
 .Sh NAME
@@ -629,7 +629,7 @@ Read-only.
 User-settings.
 Set to
 .Sq Yes
-to avoid ports that require user-interaction
+to avoid ports that require user-interaction.
 Use in conjunction with
 .Ev INTERACTIVE
 to simplify bulk-package builds.
