--- a/share/man/man5/Attic/types.5
+++ b/share/man/man5/Attic/types.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: types.5,v 1.13 2007/05/31 19:19:58 jmc Exp $
+.\"	$OpenBSD: types.5,v 1.14 2007/06/26 07:19:46 jmc Exp $
 .\"	$NetBSD: types.5,v 1.4 1997/07/10 06:56:38 mikel Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
@@ -30,7 +30,7 @@
 .\"
 .\"     @(#)types.5	8.1 (Berkeley) 6/5/93
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: June 26 2007 $
 .Dt TYPES 5
 .Os
 .Sh NAME
