--- a/share/man/man4/man4.socppc/sociic.4
+++ b/share/man/man4/man4.socppc/sociic.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: sociic.4,v 1.1 2008/05/19 20:20:57 kettenis Exp $
+.\"     $OpenBSD: sociic.4,v 1.2 2008/05/19 20:31:08 kettenis Exp $
 .\"
 .\" Copyright (c) 2008 Mark Kettenis <kettenis@openbsd.org>
 .\"
@@ -15,7 +15,7 @@
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
 .Dd $Mdocdate: May 19 2008 $
-.Dt ALIPM 4 socppc
+.Dt SOCIIC 4 socppc
 .Os
 .Sh NAME
 .Nm sociic
