--- a/share/man/man4/man4.socppc/socpcic.4
+++ b/share/man/man4/man4.socppc/socpcic.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: socpcic.4,v 1.2 2008/05/19 20:31:08 kettenis Exp $
+.\"     $OpenBSD: socpcic.4,v 1.3 2008/05/19 20:48:07 kettenis Exp $
 .\"
 .\" Copyright (c) 2008 Mark Kettenis <kettenis@openbsd.org>
 .\"
@@ -32,7 +32,7 @@ MPC8349E processor family.
 This device is largely transparent and provides no user accessible
 entry points.
 .Sh SEE ALSO
-.Xr mainbus 4 ,
+.Xr obio 4 ,
 .Xr pci 4
 .Sh HISTORY
 The
