--- a/share/man/man4/man4.sgi/Attic/mainbus.4
+++ b/share/man/man4/man4.sgi/Attic/mainbus.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD$
+.\"	$OpenBSD: mainbus.4,v 1.1 2007/11/28 16:27:29 jsing Exp $
 .\"
 .\" Copyright (c) 2007 Joel Sing <jsing@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: November 28 2007 $
 .Dt MAINBUS 4 sgi
 .Os
 .Sh NAME
