--- a/share/man/man4/man4.socppc/socpcic.4
+++ b/share/man/man4/man4.socppc/socpcic.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: socpcic.4,v 1.3 2008/05/19 20:48:07 kettenis Exp $
+.\"     $OpenBSD: socpcic.4,v 1.4 2008/05/20 04:28:59 miod Exp $
 .\"
 .\" Copyright (c) 2008 Mark Kettenis <kettenis@openbsd.org>
 .\"
@@ -14,11 +14,11 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: May 19 2008 $
+.Dd $Mdocdate: May 20 2008 $
 .Dt SOCPCIC 4 socppc
 .Os
 .Sh NAME
-.Nm socpcic 
+.Nm socpcic
 .Nd socppc onboard PCI controller
 .Sh SYNOPSIS
 .Cd socpcic0 at obio? addr 0x08300
