Move the Apache manual out of etcXX and to miscXX where it belongs. It has also been moved to /usr/share/doc/html/httpd/.  This will ease sysmerge upgrades and help keep htdocs clean.
Help from okan and phessler, doc tweaks by jmc
ok deraadt@ millert@ beck@

--- a/usr.sbin/httpd/src/support/htdigest.1
+++ b/usr.sbin/httpd/src/support/htdigest.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: htdigest.1,v 1.8 2004/12/14 19:10:38 jmc Exp $
+.\"	$OpenBSD: htdigest.1,v 1.9 2007/05/31 19:20:24 jmc Exp $
 .\"
 .\" ====================================================================
 .\" The Apache Software License, Version 1.1
@@ -57,7 +57,7 @@
 .\" originally written at the National Center for Supercomputing Applications,
 .\" University of Illinois, Urbana-Champaign.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt HTDIGEST 1
 .Os
 .Sh NAME
@@ -84,7 +84,7 @@ For details of the directives necessary to
 configure digest authentication in
 .Xr httpd 8 ,
 see the Apache manual, which can be found at
-.Pa /var/www/htdocs/manual/ .
+.Pa /usr/share/doc/html/httpd/ .
 .Pp
 The options are as follows:
 .Bl -tag -width "passwordfileXX"
