--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.213 2008/05/11 18:48:21 espie Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.214 2008/05/15 10:03:32 espie Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: May 11 2008 $
+.Dd $Mdocdate: May 15 2008 $
 .Dt BSD.PORT.MK 5
 .Os
 .Sh NAME
@@ -1660,7 +1660,7 @@ Read-only.
 Used to test for dependencies or to adjust the package name.
 .It Ev SUBST_CMD
 A command that can be used to perform
-.Ev VAR_SUBST
+.Ev SUBST_VARS
 substitution on arbitrary files.
 In normal mode,
 .Pp
