--- a/share/man/man5/pf.conf.5
+++ b/share/man/man5/pf.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pf.conf.5,v 1.400 2008/06/10 16:52:10 jmc Exp $
+.\"	$OpenBSD: pf.conf.5,v 1.401 2008/06/10 20:55:01 mcbride Exp $
 .\"
 .\" Copyright (c) 2002, Daniel Hartmeier
 .\" All rights reserved.
@@ -164,7 +164,7 @@ A table initialized with the empty list,
 will be cleared on load.
 .El
 .Pp
-Tables may be defined with the following two attributes:
+Tables may be defined with the following attributes:
 .Bl -tag -width persist
 .It Ar persist
 The
@@ -186,7 +186,7 @@ when running with
 .It Ar counters
 The
 .Ar counters
-flag enables per-address packet and byte counters which can be displayed with 
+flag enables per-address packet and byte counters which can be displayed with
 .Xr pfctl 8 .
 .El
 .Pp
