comment out cpu(4) reference, until such a time as sparc64 has such a page;

--- a/share/man/man4/man4.sparc64/cmp.4
+++ b/share/man/man4/man4.sparc64/cmp.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: cmp.4,v 1.1 2008/06/14 02:19:25 kettenis Exp $
+.\"     $OpenBSD: cmp.4,v 1.2 2008/06/14 07:13:45 jmc Exp $
 .\"
 .\" Copyright (c) 2008 Mark Kettenis <kettenis@openbsd.org>
 .\"
@@ -31,7 +31,7 @@ Sun UltraSPARC IV and Fujitsu SPARC64 VI processors.
 It is not a physical device as such, but an abstraction to attach
 individual CPU cores.
 .Sh SEE ALSO
-.Xr cpu 4 ,
+.\".Xr cpu 4 ,
 .Xr intro 4
 .Sh HISTORY
 The
