--- a/usr.sbin/inetd/inetd.8
+++ b/usr.sbin/inetd/inetd.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: inetd.8,v 1.31 2008/01/06 13:49:42 jmc Exp $
+.\"	$OpenBSD: inetd.8,v 1.32 2008/01/06 16:04:34 jmc Exp $
 .\" Copyright (c) 1985, 1991 The Regents of the University of California.
 .\" All rights reserved.
 .\"
@@ -39,7 +39,7 @@
 .Nm inetd
 .Op Fl d
 .Op Fl R Ar rate
-.Op Ar configuration file
+.Op Ar configuration_file
 .Sh DESCRIPTION
 .Nm inetd
 should be run at boot time by
