--- a/share/man/man4/man4.sparc64/cmp.4
+++ b/share/man/man4/man4.sparc64/cmp.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: cmp.4,v 1.2 2008/06/14 07:13:45 jmc Exp $
+.\"     $OpenBSD: cmp.4,v 1.3 2008/06/15 20:46:06 jmc Exp $
 .\"
 .\" Copyright (c) 2008 Mark Kettenis <kettenis@openbsd.org>
 .\"
@@ -14,14 +14,15 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: June 14 2008 $
+.Dd $Mdocdate: June 15 2008 $
 .Dt CMP 4 sparc64
 .Os
 .Sh NAME
 .Nm cmp
 .Nd chip multi-threading processor
 .Sh SYNOPSIS
-.Cd "cmp* at mainbus?"
+.Cd "cmp* at mainbus0"
+.Cd "cmp* at ssm?"
 .Cd "cpu* at cmp?"
 .Sh DESCRIPTION
 The
