--- a/share/man/man4/man4.sparc64/sbbc.4
+++ b/share/man/man4/man4.sparc64/sbbc.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: sbbc.4,v 1.1 2008/07/06 07:28:32 kettenis Exp $
+.\"     $OpenBSD: sbbc.4,v 1.2 2008/07/06 14:34:14 jmc Exp $
 .\"
 .\" Copyright (c) 2008 Mark Kettenis <kettenis@openbsd.org>
 .\"
@@ -41,5 +41,3 @@ The
 .Nm
 driver was written by
 .An Mark Kettenis Aq kettenis@openbsd.org .
-.Sh BUGS
-Console support isn't there yet.
