--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.219 2008/07/22 20:53:13 espie Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.220 2008/07/26 11:05:32 espie Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: July 22 2008 $
+.Dd $Mdocdate: July 26 2008 $
 .Dt BSD.PORT.MK 5
 .Os
 .Sh NAME
@@ -279,6 +279,10 @@ which will also retrieve
 .Ev SUPDISTFILES ,
 to fill with supplementary distribution files which are not needed for
 every configuration.
+Use of
+.Ar {pre,do,post}-fetch
+hooks is strongly discouraged, and will probably be removed in the
+near future, as this makes mirroring of distfiles very complicated.
 See
 .Ev CHECKSUMFILES ,
 .Ev CDROM_SITE ,
