Minimal driver for the VAXstation 35x0/38x0 LEGSS option, currently limited to 8 bit mode operation, and no color or accelerated features until I can find documentation about it.
Speed is decent by VAX standards, except for scrolling, which is so
abysmally slow one could see ZZ Top's beards growing while waiting for the
screen to scroll...

--- a/share/man/man4/man4.vax/mbus.4
+++ b/share/man/man4/man4.vax/mbus.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD$
+.\"	$OpenBSD: mbus.4,v 1.1 2008/08/18 23:19:18 miod Exp $
 .\"
 .\" Copyright (c) 2008 Miodrag Vallat.
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: August 18 2008 $
 .Dt MBUS 4 vax
 .Os
 .Sh NAME
@@ -34,8 +34,8 @@ The following M-bus devices are supported:
 .Bl -tag -width 8n -compact -offset indent
 .It Xr fwio 4
 Firefox Workstation I/O module
-.\" .It Xr legss 4
-.\" Low-End Graphics Subsystem
+.It Xr legss 4
+Low-End Graphics Subsystem
 .It Xr uba 4
 UNIBUS/Q-bus controller
 .El
