--- a/share/man/man4/man4.vax/lkms.4
+++ b/share/man/man4/man4.vax/lkms.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: lkms.4,v 1.3 2006/08/27 17:32:58 miod Exp $
+.\"     $OpenBSD: lkms.4,v 1.4 2007/05/31 19:19:57 jmc Exp $
 .\"
 .\" Copyright (c) 2003 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -24,7 +24,7 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt LKMS 4 vax
 .Os
 .Sh NAME
@@ -37,7 +37,7 @@
 .Sh DESCRIPTION
 The
 .Nm
-driver provides support for DEC mice hooked up to
+driver provides support for DEC mice and tablets hooked up to
 .Xr dz 4
 or
 .Xr qsc 4
