Please don't commit documentation for changes which don't compile in the tree.  Surely you were involved and noticed that the tree was being broken.

--- a/share/man/man5/pf.conf.5
+++ b/share/man/man5/pf.conf.5
@@ -1454,16 +1454,10 @@ keyword.
 This rule applies to packets with the specified TOS bits set.
 .Ar string
 may be one of
-.Ar critical ,
-.Ar inetcontrol ,
 .Ar lowdelay ,
-.Ar netcontrol ,
 .Ar throughput ,
-.Ar reliability ,
-or one of the DiffServ Code Points:
-.Ar ef ,
-.Ar af11 ... af43 ,
-.Ar cs0 ... cs7 ;
+or
+.Ar reliability ;
 .Ar number
 may be either a hex or decimal number.
 .Pp
