arguments to name description (.Nd) macros are usually lower case; fix superfluous double space in manual page body; fix typo.
from Alan R. S. Bueno.

ok jmc@

--- a/share/man/man6/intro.6
+++ b/share/man/man6/intro.6
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: intro.6,v 1.10 2005/11/04 21:46:54 jmc Exp $
+.\"	$OpenBSD: intro.6,v 1.11 2007/05/31 19:19:58 jmc Exp $
 .\"
 .\" Copyright (c) 1999 Hugh Graham
 .\"
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt INTRO 6
 .Os
 .Sh NAME
@@ -112,7 +112,7 @@ Animated raindrops display.
 .It Xr random 6
 Display random lines from a file or random numbers.
 .It Xr robots 6
-Fight off villanous robots.
+Fight off villainous robots.
 .It Xr rot13 6
 Decrypt caesar cyphers, rotated by 13 characters.
 .It Xr sail 6
