Add odyssey(4) to list of supported widgets.
Prompted by jmc@.

--- a/share/man/man4/man4.sgi/xbow.4
+++ b/share/man/man4/man4.sgi/xbow.4
@@ -50,6 +50,8 @@ The widgets currently supported under
 are:
 .Pp
 .Bl -tag -width 10n -compact -offset indent
+.It Xr odyssey 4
+SGI VPro (aka Odyssey) graphics
 .It Xr xbridge 4
 XIO-PCI bridge
 .It Xr xheart 4
