thinko (found by Daniel Dickman)

--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.253 2010/07/10 09:12:02 espie Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.254 2010/07/10 10:49:15 jmc Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -1192,9 +1192,9 @@ Read-only.
 Full name of the created package, taking flavors into account.
 Defaults to ${PKGNAME}${FLAVOR_EXT}.
 See also
-.It Ev EPOCH
+.Ev EPOCH
 and
-.It Ev REVISION .
+.Ev REVISION .
 .It Ev FULLPKGPATH
 Path to the current port's directory, relative to ${PORTSDIR},
 including flavors and subpackages.
