Add a history section saying that ldapd/ldapctl first appeared in 4.8.

--- a/usr.sbin/ldapctl/ldapctl.8
+++ b/usr.sbin/ldapctl/ldapctl.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ldapctl.8,v 1.2 2010/06/23 13:31:30 martinh Exp $
+.\"	$OpenBSD: ldapctl.8,v 1.3 2010/06/23 16:22:29 jmc Exp $
 .\"
 .\" Copyright (c) 2009, 2010 Martin Hedenfalk <martin@bzero.se>
 .\"
@@ -90,3 +90,8 @@ configuration file
 .Sh SEE ALSO
 .Xr ldapd.conf 5 ,
 .Xr ldapd 8
+.Sh HISTORY
+The
+.Nm
+program first appeared in
+.Ox 4.8 .
