--- a/usr.sbin/ldapd/ldapd.8
+++ b/usr.sbin/ldapd/ldapd.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ldapd.8,v 1.3 2010/09/24 10:10:58 lum Exp $
+.\"	$OpenBSD: ldapd.8,v 1.4 2010/09/24 10:44:50 jmc Exp $
 .\"
 .\" Copyright (c) 2009, 2010 Martin Hedenfalk <martin@bzero.se>
 .\"
@@ -99,4 +99,4 @@ program first appeared in
 .Ox 4.8 .
 .Sh CAVEATS
 .Nm
-does not fully work yet.
+is not yet fully LDAPv3 compliant.
