There is no evidence Sun ever sold rebranded Tech Source GFX-4M/8M boards.

--- a/share/man/man4/man4.sparc64/raptor.4
+++ b/share/man/man4/man4.sparc64/raptor.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: raptor.4,v 1.1 2009/03/01 19:28:20 kettenis Exp $
+.\"	$OpenBSD: raptor.4,v 1.2 2009/03/01 20:40:10 kettenis Exp $
 .\"
 .\" Copyright (c) 2009 Mark Kettenis.
 .\"
@@ -31,7 +31,7 @@ driver supports Tech Source Raptor PCI frame buffer cards based on the
 Number 9
 .Sq Imagine-128
 chips, such as the
-Sun
+Tech Source
 Raptor GFX-4M
 and
 Raptor GFX-8M
