improve line breaking in SYNOPSIS now that semantics of the .Bk macro has changed to conform with modern groff releases.
diff for route6d(8) written mostly by schwarze@, with lots of useful
advice from jmc@.

ok jmc@, schwarze@

--- a/bin/ksh/ksh.1
+++ b/bin/ksh/ksh.1
@@ -1,8 +1,8 @@
-.\"	$OpenBSD: ksh.1,v 1.138 2010/09/20 07:41:17 jmc Exp $
+.\"	$OpenBSD: ksh.1,v 1.139 2011/03/09 09:30:39 okan Exp $
 .\"
 .\"	Public Domain
 .\"
-.Dd $Mdocdate: September 20 2010 $
+.Dd $Mdocdate: March 9 2011 $
 .Dt KSH 1
 .Os
 .Sh NAME
@@ -13,12 +13,7 @@
 .Bk -words
 .Op Fl +abCefhiklmnpruvXx
 .Op Fl +o Ar option
-.Oo
-.Fl c Ar string \*(Ba
-.Fl s \*(Ba
-.Ar file
-.Op Ar argument ...
-.Oc
+.Op Fl c Ar string \*(Ba Fl s \*(Ba Ar file Op Ar argument ...
 .Ek
 .Sh DESCRIPTION
 .Nm
